# draagon-forge

./: .env.example  .eslintrc.json  .gitignore  CLAUDE.md  README.md  draagon-forge.code-workspace  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/commands/: clarify.md  constitution.md  implement.md  plan.md  review.md  specify.md  tasks.md  test.md
.github/workflows/: ci.yml
.specify/: agent-native-audit-checklist.md  constitution.md
.specify/plans/: PLAN-REQ-002-vscode-extension-core.md  PLAN-REQ-033b-code-knowledge-mesh.md  PLAN-neo4j-schema-storage.md  PLAN-schema-evolution-architecture.md  PLAN-tiered-extraction-architecture.md
.specify/requirements/: CONSOLIDATION-PROPOSAL.md  README.md  REQ-001-mcp-context-server.md  REQ-002-vscode-extension-core.md  REQ-005-belief-manager.md  REQ-006-watchlist-monitor.md  REQ-011-commit-auditor.md  REQ-014-dynamic-context-discovery.md  REQ-015-mcp-tool-lazy-loading.md  REQ-016-conversation-history-search.md  REQ-017-adaptive-context-checking.md  REQ-018-quality-aware-retrieval.md  REQ-019-file-based-output-management.md  REQ-020-semantic-context-bundles.md  REQ-021-dynamic-context-priming.md  REQ-022-cross-agent-semantic-memory.md  REQ-023-behavior-architect.md  REQ-024-behavior-evolution.md  REQ-025-cognitive-swarm.md  REQ-026-metacognitive-reflection.md  REQ-027-claude-code-integration.md  REQ-028-multi-model-cost-optimization.md  REQ-028-sidebar-inspector.md  REQ-029-account-knowledge-ecosystem.md  REQ-030-sidebar-inspector.md  REQ-031-extension-architecture.md  REQ-032-semantic-belief-decomposition.md  REQ-033-code-knowledge-mesh.md  REQ-033-code-review-agent.md  REQ-034-extraction-context-provider.md  REQ-035-ui-component-extraction.md  REQ-036-data-model-extraction.md  REQ-037-business-logic-extraction.md  REQ-038-api-contract-extraction.md  REQ-039-async-message-extraction.md  REQ-040-configuration-extraction.md  REQ-041-testing-quality-extraction.md  REQ-042-security-compliance-extraction.md
.specify/research/: code-knowledge-mesh-analysis.md  heirarchical_and_conditional_belief_architecture_for_light_AGI.md
.specify/tasks/: TASK-REQ-033b-code-knowledge-mesh.md
docs/: ARCHITECTURE_AUDIT.md  ARCHITECTURE_DECISION.md
src/draagon_forge/: __init__.py
src/draagon_forge/agent/: __init__.py  behavior.py  forge_agent.py
src/draagon_forge/agents/: __init__.py
src/extension/: extension.ts
src/mcp/: __init__.py  server.py
src/mesh-builder/: .eslintrc.json  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.test.tsbuildinfo
tests/: __init__.py  conftest.py
tests/agents/: __init__.py  test_code_review.py  test_commit_auditor.py
tests/integration/: __init__.py  conftest.py  test_belief_e2e.py  test_java_rpg_beliefs_e2e.py
tests/mcp/: __init__.py  test_memory_inmemory.py
(+159 files in other folders)
